Fix settings drawer on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -82,6 +82,10 @@ body {
     &.open {
         bottom: 0;
     }
+
+    &.disabled {
+        display: none;
+    }
 }
 
 .color-wrap {
